Ajout de javadocs et de structuration